--- a/.github/workflows/sync-team-branch.yml
+++ b/.github/workflows/sync-team-branch.yml
@@ -15,11 +15,11 @@ jobs:
 
       - name: Set up Git
         run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
+          git config user.name "tcd2225@dlsud.edu.ph"
+          git config user.email "CharlieTaglinao"
 
       - name: Push changes to team-branch
         run: |
-          git checkout -b team-branch origin/team-branch || git checkout team-branch
+          git checkout team-branch origin/team-branch || git checkout team-branch
           git merge --no-ff ${{ github.ref_name }} -m "Sync from ${{ github.ref_name }}"
           git push origin team-branch
