--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
     "require": {
         "phpmailer/phpmailer": "^6.9",
-        "sendgrid/sendgrid": "^8.1",
         "guzzlehttp/guzzle": "^7.9",
-        "php-imap/php-imap": "^2.0"
+        "php-imap/php-imap": "^2.0",
+        "ralouphie/getallheaders": "^3.0",
+        "sendgrid/sendgrid": "^8.1"
     }
 }
